add css but still can't get fade out to work properly in js

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <h2>Ta Dah !!</h2>
-        <h3>- magic my to-do list away -</h3>
+        <h1>Ta-Dah !!  - to-do list magic -</h1>
+        <!--<h3>- magic my to-do list away -</h3>-->
 
         <!--<div id='todo-list'></div>--> <!--DOM inject node-->
 
         <form id="add-task">
-          <input id="new-task-input" type="text" placeholder="new task" required/>
+          <input id="new-task-input" type="text" placeholder="to-do" required/>
           <button>Add</button>
         </form>
         
-        <h4>I Must:</h4>
+        <!--<h4>I Must:</h4>-->
         <div id='todo-list'></div> <!--DOM inject node-->
 
       </div>
